// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CardDetails component matches the snapshot when given specific props 1`] = `
Array [
  <div
    className="ixyey"
  >
    <div
      className="hDEKkD"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Do you know the essential first step of good SEO? It’s keyword research. In this training, 
you’ll learn how to research and select the keywords that will guide searchers to your pages.",
        }
      }
    />
  </div>,
  <div
    className="hLFZrf"
  >
    <a
      className="hoNwyE"
      href="https://yoast.com/cart/?add-to-cart=1311259"
      rel={null}
      target="_blank"
    >
      Start your free trail
      <span
        className="A11yNotice-sc-1feyioo-0 gHCoqL"
      >
        (Opens in a new browser tab)
      </span>
    </a>
    <a
      className="blWwuK"
      href="https://yoast.com/academy/keyword-research-training/"
      rel={null}
      target="_blank"
    >
      Read more about this training »
      <span
        className="A11yNotice-sc-1feyioo-0 gHCoqL"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>,
]
`;

exports[`The empty CardDetails component matches the snapshot 1`] = `
Array [
  <div
    className="ixyey"
  >
    <div
      className="hDEKkD"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </div>,
  <div
    className="hLFZrf"
  />,
]
`;
